Resolved Extra space and navigational issues

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
   flex-direction: column;
   flex-wrap: wrap;
   background: #e5e5e5;
+  border: 1px solid black;
 }
 
 nav {
@@ -16,7 +17,6 @@ nav {
   margin: 0;
   display: flex;
   justify-content: space-between;
-  position: fixed;
   background: transparent;
   z-index: 1;
 }
@@ -151,7 +151,7 @@ a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   background-color: white;
   width: 327px;
   min-height: auto;
@@ -275,12 +275,14 @@ ul .fa-solid {
   line-height: 20px;
   width: 280px;
   height: 60px;
-  margin: 0 0 0 0;
+  margin-left: -33px;
   list-style: none;
   background-color: #f7f7f9;
+  border-radius: 10px;
   margin-top: 12px;
+  padding-left: 10px;
   color: #253858;
-  gap: 30px;
+  gap: 20px;
   display: flex;
   align-items: center;
 }
